# rpi4-rust-workspace

./: Cargo.toml  README.md  link.ld
.cargo/: config
bcm2711/: Cargo.toml
bcm2711-hal/: Cargo.toml
bcm2711-hal/src/: cache.rs  clocks.rs  delay.rs  gpio.rs  i2c.rs  lib.rs  prelude.rs  rng.rs  serial.rs  spi.rs  time.rs  timer.rs
bcm2711-hal/src/dma/: control_block.rs  mod.rs
bcm2711-hal/src/eth/: address.rs  control_block.rs  descriptor.rs  dma.rs  hfb.rs  intr.rs  mdio.rs  mii.rs  mod.rs  netif.rs  phy.rs  rx.rs  rx_ring.rs  tx_ring.rs  umac.rs
bcm2711-hal/src/mailbox/: mod.rs  tag_id.rs
bcm2711-hal/src/mailbox/msg/: alloc_framebuffer.rs  get_arm_mem.rs  get_clock_rate.rs  get_mac_address.rs  get_serial_num.rs  get_temp.rs  get_vc_mem.rs  mod.rs  tag.rs
bcm2711/src/: bsc0.rs  bsc1.rs  bsc2.rs  dma.rs  genet.rs  gpio.rs  i2c0.rs  i2c1.rs  i2c2.rs  i2c3.rs  i2c4.rs  i2c5.rs  i2c6.rs  lib.rs  mbox.rs  rng.rs  spi0.rs  spi1.rs  spi2.rs  sys_timer.rs  uart0.rs  uart1.rs
bcm2711/src/genet/: ext.rs  hfb.rs  hfb_regs.rs  intrl2.rs  intrl2_0.rs  intrl2_1.rs  mdio.rs  mod.rs  rbuf.rs  rx_desc.rs  rx_dma.rs  rx_ring.rs  sys.rs  tx_desc.rs  tx_dma.rs  tx_ring.rs  umac.rs
display/: Cargo.toml
display/src/: lib.rs
examples/analog-clock/: Cargo.toml
examples/analog-clock/src/: main.rs
examples/embedded-graphics/: Cargo.toml
examples/embedded-graphics/src/: main.rs
examples/eth/: Cargo.toml
examples/eth/src/: main.rs
examples/ip/: Cargo.toml
examples/ip/src/: main.rs  smoltcp_phy.rs
examples/ipcam-viewer/: Cargo.toml
examples/ipcam-viewer/src/: local_heap.rs  main.rs  net.rs  serial_logger.rs
examples/keypad/: Cargo.toml
examples/keypad/src/: main.rs
examples/mbox/: Cargo.toml
examples/mbox/src/: main.rs
examples/mem2mem-dma/: Cargo.toml
examples/mem2mem-dma/src/: main.rs
examples/temperature-plot/: Cargo.toml
examples/temperature-plot/src/: main.rs
examples/uart0/: Cargo.toml
examples/uart0/src/: main.rs
examples/uart1/: Cargo.toml
examples/uart1/src/: main.rs
openocd/: rpi4.cfg
raspi3_boot/: Cargo.toml
raspi3_boot/src/: lib.rs  panic_uart1.rs
rtp/: Cargo.toml
rtp-h264-decoder/: Cargo.toml
rtp-h264-decoder/examples/: rtsp-decode.rs
rtp-h264-decoder/src/: fragmentation_unit.rs  header.rs  lib.rs  nal_unit_type.rs
rtp-jpeg-decoder/: Cargo.toml
rtp-jpeg-decoder/examples/: rtsp-decode.rs
rtp-jpeg-decoder/src/: header.rs  lib.rs
rtp/src/: lib.rs
rtsp/: Cargo.toml  README.md
rtsp/examples/: simple-play.rs
rtsp/src/: emit.rs  lib.rs  method.rs  parse.rs  request.rs  request_line.rs  response.rs  status_code.rs  status_line.rs  uri.rs  version.rs
rtsp/src/header/: headers.rs  mod.rs  name.rs
rtsp/src/header/fields/: cseq.rs  mod.rs  public.rs  session.rs
smoltcp-phy/: Cargo.toml
smoltcp-phy/src/: lib.rs
tools/: qemu-runner
uplot/: Cargo.toml
uplot/examples/: simulator.rs
uplot/src/: config.rs  coordinates.rs  internal.rs  label_storage.rs  lib.rs  storage.rs  string.rs
