[workspace]

members = [
    "bcm2711",
    "bcm2711-hal",
    "display",
    "smoltcp-phy",
    "rtsp",
    "rtp",
    "rtp-jpeg-decoder",
    "raspi3_boot",
    "examples/uart0",
    "examples/uart1",
    "examples/mbox",
    "examples/embedded-graphics",
    "examples/analog-clock",
    "examples/eth",
    "examples/ip",
    "examples/ipcam-viewer",
    "examples/mem2mem-dma",
]

[profile.release]
# TODO - is this still needed?
# Prevents unaligned access, see:
# https://github.com/rust-lang/rust/issues/66897
opt-level = 1
