[workspace]

members = [
    "bcm2711",
    "bcm2711-hal",
    "display",
    "smoltcp-phy",
    "rtsp",
    "rtp",
    "rtp-jpeg-decoder",
    "rtp-h264-decoder",
    "raspi3_boot",
    "examples/uart0",
    "examples/uart1",
    "examples/mbox",
    "examples/embedded-graphics",
    "examples/analog-clock",
    "examples/eth",
    "examples/ip",
    "examples/ipcam-viewer",
    "examples/mem2mem-dma",
]
