[package]
name = "bcm2711-hal"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
bcm2711 = { path = "../bcm2711" }
cortex-a = "2.7"
nb = "0.1"
bitfield = "0.13"
typenum = "1.10"
arr_macro = "0.1"

[dependencies.void]
default-features = false
version = "1.0"

[dependencies.embedded-hal]
features = ["unproven"]
version = "0.2"
