[package]
name = "rtp-jpeg-decoder"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]

[dependencies.rtp]
path = "../rtp"

[dependencies.nanojpeg-rs]
git = "https://github.com/jonlamb-gh/nanojpeg-rs"
branch = "master"

[dependencies.byteorder]
version = "1.3"
default-features = false

[dev-dependencies.rtsp]
path = "../rtsp"
