[package]
name = "rtp-jpeg-decoder"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]

[dependencies.rtp]
path = "../rtp"

[dependencies.nanojpeg-rs]
git = "https://github.com/jonlamb-gh/nanojpeg-rs"
branch = "master"
default-features = false
features = []

[dependencies.byteorder]
version = "1.3"
default-features = false

[dependencies.log]
version = "0.4"
default-features = false

[dev-dependencies]
env_logger = "0.7"

[dev-dependencies.rtsp]
path = "../rtsp"
