[package]
name = "ipcam-viewer"
version = "0.1.0"
authors = ["Jon Lamb"]
edition = "2018"

[dependencies]
bcm2711-hal = { path = "../../bcm2711-hal" }
smoltcp-phy = { path = "../../smoltcp-phy" }
heapless = "0.5"
arr_macro = "0.1"
nb = "0.1"

[dependencies.rtsp]
path = "../../rtsp"

[dependencies.rtp-jpeg-decoder]
path = "../../rtp-jpeg-decoder"

# using core::alloc::Layout instead of alloc crate to avoid allocator requirements
# just using the Heap object
[dependencies.linked_list_allocator]
default-features = false
features = []
git = "https://github.com/jonlamb-gh/linked-list-allocator.git"
branch = "master"

[dependencies.raspi3_boot]
path = "../../raspi3_boot"
default-features = false
features = ["panic-uart1"]

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.smoltcp]
version = "0.6"
default-features = false
features = [
    "ethernet",
    "proto-ipv4",
    "proto-ipv6",
    "socket-icmp",
    "socket-udp",
    "socket-tcp",
]
